<resources>
    <string name="feature_categories_title">Categories</string>
    <string name="feature_facts_by_category_title">Facts</string>
    <string name="feature_no_categories_found">No categories found!</string>
    <string name="feature_no_facts_found_in_category">No facts found in this category!</string>
    <string name="feature_categories_loading">Loading categories</string>
    <string name="feature_facts_category_loading">Loading facts by category</string>
</resources>