...
            .wrapContentSize(Alignment.Center),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        FactPediaErrorText(text = text)

        FactPediaButton(
            modifier = Modifier.testTag("retry_button").fillMaxWidth(),
            text = "Retry",
            onClick = onRetry
        )
    }
}

...
